UI fixes to work on small screens

--- a/src/main/resources/assets/report.css
+++ b/src/main/resources/assets/report.css
@@ -6,6 +6,7 @@ div.report
 	border-top-right-radius: 0.5em;
 	border-bottom-right-radius: 0.5em;
 	border-bottom-left-radius: 0.5em;
+	overflow: auto;
 }
 div.report
 {
